# dvault

./: .gitignore  LICENSE  README.md  agents.md  analysis_options.yaml  dvault.workspace.code-workspace  pubspec.yaml  result.txt  testfile.sbox
.github/workflows/: endian-interop.yml  rust.yml  windows-agent-ipc.yml
docs/: archive_restructure_summary_report.md  archive_v2_restructure_proposal.md  benchmark_history.md  cdc_dedupe_threat_recovery_design.md  ci_secret_storage_comparison.md  cli_how_to.md  compression_optimization_report.md  design_discussion.md  encrypted_file_comparison.md  file_formats.md  format.md  fuzzing.md  implementation_overview.md  key_management.md  lockbox_session_agent.md  native_threading_report_2026_05_31.md  performance_review.md  real_world_large_file_benchmark_2026_06_01.md  rust_development.md  rust_idioms_review.md  secure_env_pages.md  secure_string_design.md  secure_variable_pages.md  security_audit.md  terminology.md  wasm_unlock_design.md  zstd_match_sequence_experiment_report.md  zstd_upstream_experiment_report.md
epage_file/: README.md  pubspec.yaml
epage_file/doc/: design_spec.md
epage_file/lib/: epage_file.dart
epage_file/test/: debug_header.dart  debug_test.dart  epage_file_test.dart  inspect_file.dart
epage_file/tool/: seek_benchmark.dart
lib/src/: dot_vault_file.dart  dvault.dart  dvault_aes_encrypter.dart  env.dart  file_encryptor.dart  key_file.dart  sshvault.dart  table_of_content.dart  toc_entry.dart  vault.dart
rust/: .gitignore  Cargo.toml
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: header.rs  key_directory.rs  pages_recovery.rs  paths.rs  records_recovery.rs
rust/lockbox_cli/: Cargo.toml  LICENSE  PGP_LOCKBOX_KEY_CLAIMS.md  PGP_REVAULT_KEY_CLAIMS.md
rust/lockbox_cli/src/: cache.rs  main.rs  secret_prompt.rs
rust/lockbox_cli/src/cache/: unix.rs  windows.rs
rust/lockbox_cli/src/commands/: context.rs  doctor.rs  env.rs  files.rs  form.rs  help.rs  keys.rs  mod.rs  output.rs  recovery.rs  session.rs  variables.rs  vault.rs  visualize.rs
rust/lockbox_cli/tests/: agent_flow.rs  cli_flow.rs  contact_receive_alias.rs  help_open_key.rs  share_integration.rs
rust/lockbox_core/: Cargo.toml
rust/lockbox_core/benches/: performance.rs
rust/lockbox_core/examples/: archive_v2_probe.rs  compression_corpus.rs  dedupe_probe.rs  dict_probe.rs  perf.rs  semisolid_probe.rs  zstd_gap_probe.rs
rust/lockbox_core/examples/common/: probe_ruzstd.rs
rust/lockbox_core/src/: api_tests.rs  cache_options.rs  checked.rs  commit_root.rs  compression.rs  compression_regression_tests.rs  constants.rs  crypto.rs  env_store.rs  error.rs  extracted_file.rs  extracted_node.rs  extracted_symlink.rs  fast_hash.rs  file_chunk.rs  format.rs  free_index.rs  free_slot.rs  header.rs  host_path.rs  index.rs  key_directory.rs  key_slot.rs  key_wrap.rs  lib.rs  list_iter.rs  list_options.rs  lockbox.rs  logical_path.rs  manifest_codec.rs  memory_pressure.rs  page.rs  page_cache.rs  page_inspection.rs  payload.rs  record.rs  recovery_report.rs  recovery_report_options.rs  scan.rs  secret_bytes.rs  (+9 more)
rust/lockbox_core/src/file_format/: commit_auth.rs  commit_root.rs  header.rs  key_directory.rs  mod.rs  page.rs  page_buffer.rs  page_inspection.rs  page_scanner.rs  payload.rs
rust/lockbox_core/src/format/: commit_root.rs  key_directory.rs  mod.rs  page.rs  payload.rs
rust/lockbox_core/src/keys/: crypto.rs  key_derivation.rs  key_slot.rs  key_wrap.rs  mod.rs  secret_bytes.rs  secret_vec.rs  signing.rs
rust/lockbox_core/src/lockbox/: commit.rs  env.rs  extraction.rs  files.rs  forms.rs  key_management.rs  listing.rs  mutation.rs  recovery.rs  symlinks.rs  variables.rs
rust/lockbox_core/src/model/: compression_frame_manifest.rs  entry.rs  env_name.rs  env_sensitivity.rs  extract_policy.rs  extracted_file.rs  extracted_node.rs  extracted_symlink.rs  file_chunk.rs  form.rs  list_iter.rs  list_options.rs  lockbox_id.rs  mod.rs  node_kind.rs  page_object_packer.rs  record.rs  recovery_report.rs  recovery_report_options.rs  variable_name.rs  variable_sensitivity.rs
rust/lockbox_core/src/paths/: lockbox_path.rs  mod.rs
rust/lockbox_core/src/storage/: cache_options.rs  free_index.rs  free_slot.rs  memory_pressure.rs  mod.rs  page_cache.rs
rust/lockbox_core/src/toc/: env_btree.rs  form_btree.rs  manifest_codec.rs  manifest_entry.rs  mod.rs  page_tree.rs  toc_btree.rs  toc_codec.rs  toc_entry.rs  variable_btree.rs
rust/lockbox_core/tests/: api.rs  compression_regression.rs  endian_interop.rs  public_api_suite.rs
rust/lockbox_key_server/: BENCHMARKS.md  CLI_SWITCHES.md  CLI_VAULT_SHARE_DESIGN.md  Cargo.toml  (+5 more)
rust/lockbox_secure/: Cargo.toml
rust/lockbox_secure/src/: allocation.rs  arena.rs  canary.rs  capabilities.rs  config.rs  error.rs  lib.rs  memory_region.rs  page_permission.rs  secure_access.rs  secure_heap.rs  secure_string.rs  secure_vec.rs  tests.rs
rust/lockbox_share_protocol/: Cargo.toml
rust/lockbox_share_protocol/src/: client.rs  lib.rs  payload.rs  protocol.rs  replication.rs  status.rs  topology.rs
rust/lockbox_share_protocol/tests/: client.rs
rust/lockbox_share_server/: BENCHMARKS.md  CLI_VAULT_SHARE_DESIGN.md  Cargo.toml  DESIGN.md  REDUNDANCY.md
rust/lockbox_share_server/src/: install.rs  lib.rs  main.rs  server.rs  server_log.rs  store.rs
rust/lockbox_share_server/tests/: e2e_failover.rs  protocol_store.rs
rust/lockbox_vault/: AGENT_SLEEP_VM_TESTING.md  Cargo.toml
rust/lockbox_vault/src/: active_secret.rs  agent_client.rs  agent_config.rs  agent_log.rs  agent_protocol.rs  content_key_store.rs  hex.rs  key_format.rs  lib.rs  noop_store.rs  platform_secret_store.rs  sleep_watcher.rs  unix.rs  vault.rs  vault_directory.rs  windows.rs
rust/lockbox_vault/tests/: vault_api.rs
test/: cli_test.dart  debug_header_test.dart  dvault_test.dart  format_test.dart  large_vault_test.dart  lockbox_test.dart  password_helper_test.dart  repository_test.dart  strong_key_test.dart
web/: index.html  main.dart  main.mjs  main.support.js  main.unopt.wasm  main.unopt.wasm.map  main.wasm  main.wasm.map  styles.css
(+113 files in other folders)
