[package]
name = "lockbox_cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI for Lockbox encrypted archives"

[[bin]]
name = "lockbox"
path = "src/main.rs"

[dependencies]
lockbox_core = { path = "../lockbox_core" }
lockbox_vault = { path = "../lockbox_vault" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }
