[package]
name = "lockbox_cli"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"
description = "CLI for Lockbox encrypted archives"

[[bin]]
name = "lockbox"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", default-features = false, features = [
    "error-context",
    "help",
    "std",
    "usage",
] }
lockbox_core = { path = "../lockbox_core" }
lockbox_share_protocol = { path = "../lockbox_share_protocol" }
lockbox_vault = { path = "../lockbox_vault" }
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }
