[package]
name = "lockbox_cli"
version = "0.1.0-alpha.1"
edition = "2021"
license-file = "LICENSE"
description = "CLI for reVault encrypted lockboxes"

[[bin]]
name = "lockbox"
path = "src/main.rs"

[[bin]]
name = "lbx"
path = "src/bin/lbx.rs"

[dependencies]
clap = { version = "4.6.1", default-features = false, features = [
    "error-context",
    "help",
    "std",
    "usage",
] }
lockbox_core = { version = "0.1.0-alpha.1", path = "../lockbox_core" }
lockbox_share_protocol = { version = "0.1.0-alpha.1", path = "../lockbox_share_protocol" }
lockbox_vault = { version = "0.1.0-alpha.1", path = "../lockbox_vault" }

sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }
