[package]
name = "lockbox_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Prototype Lockbox v2 format core with manifest, reuse, and recovery APIs"

[lib]
name = "lockbox_core"
path = "src/lib.rs"

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
getrandom = "0.2"
ml-kem = { version = "0.3", features = ["getrandom"] }
sha2 = "0.10"
unicode-normalization = "0.1"
zeroize = "1"
zstd = "0.13"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Memory"] }
