[package]
name = "lockbox_core"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"
description = "Lockbox v2 format core with TOC, reuse, and recovery APIs"

[lib]
name = "lockbox_core"
path = "src/lib.rs"

[features]
vault-bridge = []

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
getrandom = "0.2"
lockbox_secure = { path = "../lockbox_secure" }
ml-kem = { version = "0.3", features = ["getrandom"] }
sha2 = "0.10"
unicode-normalization = "0.1"
zeroize = "1"
oxiarc-zstd = "0.2"
sysinfo = { version = "0.38.4", default-features = false, features = [
    "system",
] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
criterion = "0.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bench]]
name = "performance"
harness = false
