[package]
name = "lockbox_core"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"
description = "Lockbox v2 format core with TOC, reuse, and recovery APIs"

[lib]
name = "lockbox_core"
path = "src/lib.rs"

[features]
vault-bridge = []
native-zstd-encoder = ["dep:zstd"]

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
getrandom = "0.2"
hkdf = "0.12"
lockbox_secure = { path = "../lockbox_secure" }
ml-kem = { version = "0.3", features = ["getrandom"] }
sha2 = "0.10"
unicode-normalization = "0.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = "1"
ruzstd = { path = "../../../zstd-rs/ruzstd" }
sysinfo = { version = "0.38.4", default-features = false, features = [
    "system",
] }
zstd = { version = "0.13.3", default-features = false, optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
criterion = "0.5"
oxiarc-zstd = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bench]]
name = "performance"
harness = false
