[package]
name = "lockbox_secure"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"
description = "Page-pooled secure byte and string storage for reVault"

[lib]
name = "lockbox_secure"
path = "src/lib.rs"

[dependencies]
getrandom = "0.2"
zeroize = "1"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
] }
