[package]
name = "lockbox_vault"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"
description = "Reusable Lockbox local vault and agent transport"

[lib]
name = "lockbox_vault"
path = "src/lib.rs"

[dependencies]
base64ct = { version = "1", features = ["alloc"] }
chacha20poly1305 = "0.10"
getrandom = "0.2"
lockbox_core = { path = "../lockbox_core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zeroize = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
